--- a/app/views/home_pages/index.html.erb
+++ b/app/views/home_pages/index.html.erb
@@ -15,12 +15,12 @@
         </ul>
       </nav>
       <header id="hero-header">
-        <h1>Engage & Serve Guests
-          Automatically</h1>
+        <h1>Engage & Serve Guests<br/><b>
+          Automatically</b></h1>
       </header>
       <div class="test-go-moment-container">
         <div class="call-to-action">
-          <p>See for yourself</p>
+          <p>See for Yourself</p>
         </div>
         <div class="row" id="test-go-moment">
           <div class="large-12 columns">
@@ -29,7 +29,7 @@
                 <input type="text" id="test-go-moment-input" placeholder="555-555-5555" />
               </div>
               <div class="small-3 columns">
-                <span class="postfix" id="test-go-moment-submit" onclick=testGo()><a href="#">Text Me</a></span>
+                <a href="#" id="test-submit"><span class="postfix" id="test-go-moment-submit" onclick=testGo()>Text Me</span></a>
               </div>
             </div>
           </div>
@@ -44,7 +44,7 @@
   <div class="product-summary">
     <div class="product-overview">
       <header>
-        <h2>Increase Guest Loyalty On Autopilot</h2>
+        <h2>Increase Hotel Revenues On Autopilot</h2>
       </header>
       <p>Delight guests with instant service without tying up your staff</p>
     </div>
@@ -211,7 +211,7 @@
       </li>
     </ul>
     <div class="footer-info">
-      <p>©2015 Go Moment | Unforgettable Experiences</p>
+      <p>©2015 Go Moment <span>| Unforgettable Experiences</span></p>
       <ul class="footer-links">
         <li>
           <a target="_blank" href="http://www.gomoment.com/contact/">Contact Us</a>
